<resources>
    <string name="app_name">SocialNetwork</string>
    <!-- retrofit -->
    <string name="retrofit_exception">At this time the service is not available, please try again later.</string>
    <string name="retrofit_failure">At this time the service is not available, please try again later.</string>
    <string name="retrofit_timeout">The waiting time was exceeded, check your connection and try again later.</string>
    <!-- <string name="retrofit_timeout">Timed out, retry request.</string> -->
    <string name="retrofit_wrong_response">At this time the service is not available, please try again later.</string>
    <string name="session_expired">Session expired</string>

    <!-- Errors -->
    <string name="title_dialog">Oops. Something went wrong.</string>
    <string name="server_error">An error occurred with the server, please verify your connection and try again later.</string>
    <string name="email_error_message">Please enter your email address in format yourname@example.com</string>
    <string name="password_error_message">Please enter your password</string>

    <!-- dialog -->
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from_gallery">Gallery</string>
    <string name="take_pick">Camera</string>
    <string name="select_option">Select an option</string>
    <string name="title_log_out">Are you sure?</string>
    <string name="common_mistake">An error occurred, try again.</string>
    <string name="body_log_out">You are about to log out, do you want to continue?</string>

    <!-- log in -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Dont have an account? Sign In</string>

    <!-- sign in -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="create">Create User</string>
    <string name="sign_in_title">Sign In</string>
    <string name="password_incorrect_message">The password must contain more than 6 characters.</string>
    <string name="password_not_match">Password confirmation does not match.</string>
    <string name="user_created">User created successfully.</string>

    <!-- settings -->
    <string name="menu">Menu</string>
    <string name="see_your_profile">See your profile</string>

    <!-- profile -->
    <string name="user_name">%1$s %2$s</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="what_are_you_thinking">What\'s on your mind?</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="without_results">Without results</string>
    <string name="just_now">Just now</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit Post</string>
    <string name="update">Update</string>
    <string name="create_post">Create Post</string>

    <!-- edit profile -->
    <string name="profile_photo">Profile Photo</string>
    <string name="single_edit">Edit</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_your_name_email_address_and_more">Update your name, email address and more.</string>

    <!-- Personal Information -->
    <string name="personal_information">Personal Information</string>
    <string name="contact_info">Contact Info</string>
    <string name="manage_your_email">Manage your email</string>

    <!-- Update information -->
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="edit_name_message">Remember that your name is visible to all other users, you can change it whenever you want, the username is the only one that cannot be changed.</string>
    <string name="change_profile_name">Change profile name</string>
    <string name="change_email">Change email address</string>
    <string name="current_email">Current Email</string>
    <string name="edit_email_message">You can change your email as many times as you want, but remember that if you change it now you must log in with the new email.</string>
    <string name="new_equal_current_name">The new name is equal to the current name.</string>

    <!-- People -->
    <string name="view_profile">View Profile</string>


</resources>