<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".ui.update_user_info.UpdateInfoFragment">


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="@dimen/dimen_small"
        android:layout_marginRight="@dimen/dimen_small"
        android:layout_marginTop="@dimen/dimen_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="@dimen/dimen_small"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:background="@color/colorLightGray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <TextView
                android:paddingStart="@dimen/dimen_small"
                android:paddingTop="@dimen/dimen_small"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp"
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingStart="@dimen/dimen_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="@tools:sample/full_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:background="@color/colorGrayButton"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/dimen_small"
                android:layout_marginStart="@dimen/dimen_small"
                android:layout_marginEnd="@dimen/dimen_small"
                android:layout_marginTop="@dimen/dimen_normal"
                android:layout_marginBottom="@dimen/dimen_normal"
                android:text="@string/edit_name_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginStart="@dimen/dimen_small"
                android:layout_marginEnd="@dimen/dimen_small"
                android:layout_marginBottom="@dimen/dimen_small"
                android:text="@string/change_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>