<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:clickable="true"
    tools:context=".ui.personal_information.PersonalInfoFragment">

    <TextView
        android:textStyle="bold"
        android:layout_margin="@dimen/dimen_normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information" />

    <TextView
        android:layout_marginTop="@dimen/dimen_big"
        android:layout_marginStart="@dimen/dimen_normal"
        android:layout_marginBottom="@dimen/dimen_small"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information" />

    <LinearLayout
        android:id="@+id/btnName"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/dimen_normal"
        android:paddingRight="@dimen/dimen_normal"
        android:paddingTop="@dimen/dimen_small"
        android:paddingBottom="@dimen/dimen_small"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvName"
                android:layout_centerVertical="true"
                tools:text="@tools:sample/full_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:background="@color/colorLightGray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/btnEmail"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/dimen_normal"
        android:paddingRight="@dimen/dimen_normal"
        android:paddingTop="@dimen/dimen_small"
        android:paddingBottom="@dimen/dimen_small"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/contact_info"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_centerVertical="true"
                android:text="@string/manage_your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>